feat: Add 50-word animal vocabulary and improve learning flow
- Add js/data/animals.js with 50 Vietnamese-English animal word pairs
- Fix bug where last word couldn't be marked as known
- Simplify completion screen with single 'Ôn lại' button
- Make action buttons full-width with improved 3D design
- Auto-load animal topic when no topics exist

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="app-container">
         <header class="header">
@@ -43,7 +45,9 @@
         </footer>
     </div>
 
+    <script src="js/data/animals.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
