--- a/learn.html
+++ b/learn.html
@@ -36,7 +36,12 @@
                     <div class="word-term1" id="word-term1">Từ tiếng Việt</div>
                     <div class="word-divider">↓</div>
                     <div class="word-term2-container" id="term2-container">
-                        <div class="word-term2 hidden-answer" id="word-term2">English word</div>
+                        <!-- Answer content (hidden initially) -->
+                        <div class="answer-content hidden-answer" id="answer-content">
+                            <img id="word-image" src="" alt="" class="word-image">
+                            <div class="word-term2" id="word-term2">English word</div>
+                        </div>
+                        <!-- Overlay to click -->
                         <div class="answer-overlay" id="answer-overlay">
                             <span>👆 Nhấn để xem</span>
                         </div>
