--- a/admin.html
+++ b/admin.html
@@ -74,6 +74,9 @@ cat"></textarea>
                     <button class="btn btn-danger" id="btn-clear-all">
                         🗑️ Xóa tất cả dữ liệu
                     </button>
+                    <button class="btn btn-danger" id="btn-reset-app">
+                        🔄 Đặt lại ứng dụng
+                    </button>
                 </div>
             </section>
 
