--- a/admin.html
+++ b/admin.html
@@ -95,6 +95,7 @@ cat"></textarea>
         </footer>
     </div>
 
+    <script src="js/data/animals.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/admin.js"></script>
 </body>
