bao cao hinh anh

--- a/admin.html
+++ b/admin.html
@@ -71,10 +71,13 @@ cat"></textarea>
                         📥 Nhập dữ liệu
                     </button>
                     <input type="file" id="file-import" accept=".json" class="hidden">
+                    <a href="reported-images.html" class="btn btn-accent">
+                        ⚠️ Xem hình ảnh được báo cáo
+                    </a>
                     <button class="btn btn-danger" id="btn-clear-all">
                         🗑️ Xóa tất cả dữ liệu
                     </button>
-                    <button class="btn btn-danger" id="btn-reset-app">
+                    <button class="btn btn-danger hidden" id="btn-reset-app">
                         🔄 Đặt lại ứng dụng
                     </button>
                 </div>
@@ -96,6 +99,11 @@ cat"></textarea>
     </div>
 
     <script src="js/data/animals.js"></script>
+    <script src="js/data/fruits.js"></script>
+    <script src="js/data/vegetables.js"></script>
+    <script src="js/data/household.js"></script>
+    <script src="js/data/occupations.js"></script>
+    <script src="js/data/colors-shapes.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/admin.js"></script>
 </body>
