--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     </div>
 
     <script src="js/data/animals.js"></script>
+    <script src="js/data/fruits.js"></script>
+    <script src="js/data/vegetables.js"></script>
+    <script src="js/data/household.js"></script>
+    <script src="js/data/occupations.js"></script>
+    <script src="js/data/colors-shapes.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/app.js"></script>
 </body>
