--- a/learn.html
+++ b/learn.html
@@ -55,6 +55,9 @@
                     <span class="btn-icon">❌</span>
                     <span class="btn-text">Chưa thuộc</span>
                 </button>
+                <button class="btn-action btn-report" id="btn-report" title="Báo cáo hình ảnh có vấn đề">
+                    <span class="btn-icon">⚠️</span>
+                </button>
                 <button class="btn-action btn-know" id="btn-know" title="Đã thuộc">
                     <span class="btn-icon">✅</span>
                     <span class="btn-text">Đã thuộc</span>
@@ -77,6 +80,11 @@
     </div>
 
     <script src="js/data/animals.js"></script>
+    <script src="js/data/fruits.js"></script>
+    <script src="js/data/vegetables.js"></script>
+    <script src="js/data/household.js"></script>
+    <script src="js/data/occupations.js"></script>
+    <script src="js/data/colors-shapes.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/learning.js"></script>
 </body>
