--- a/admin.html
+++ b/admin.html
@@ -60,6 +60,13 @@ cat"></textarea>
                 </div>
             </section>
 
+            <section class="admin-section">
+                <h2>📌 Từ Từng Chưa Thuộc</h2>
+                <div class="data-actions">
+                    <a href="forgot-words.html" class="btn btn-secondary">📌 Xem danh sách</a>
+                </div>
+            </section>
+
             <!-- Data Management -->
             <section class="admin-section">
                 <h2>💾 Quản Lý Dữ Liệu</h2>
