add sub topic b1.01

--- a/learn.html
+++ b/learn.html
@@ -40,6 +40,10 @@
                         <div class="answer-content hidden-answer" id="answer-content">
                             <img id="word-image" src="" alt="" class="word-image">
                             <div class="word-term2" id="word-term2">English word</div>
+                            <!-- Extra info: IPA and example (shown when no image) -->
+                            <div class="word-extra-info hidden" id="word-extra-info">
+                                <!-- Will be populated by JS -->
+                            </div>
                         </div>
                         <!-- Overlay to click -->
                         <div class="answer-overlay" id="answer-overlay">
@@ -85,6 +89,9 @@
     <script src="js/data/household.js"></script>
     <script src="js/data/occupations.js"></script>
     <script src="js/data/colors-shapes.js"></script>
+    <!-- B1 Vocabulary -->
+    <script src="js/data/b1_01_personalInformation_Relationship.js"></script>
+    <script src="js/data/b1_main.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/learning.js"></script>
 </body>
