--- a/admin.html
+++ b/admin.html
@@ -111,6 +111,9 @@ cat"></textarea>
     <script src="js/data/household.js"></script>
     <script src="js/data/occupations.js"></script>
     <script src="js/data/colors-shapes.js"></script>
+    <!-- B1 Vocabulary -->
+    <script src="js/data/b1_01_personalInformation_Relationship.js"></script>
+    <script src="js/data/b1_main.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/admin.js"></script>
 </body>
