--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <script src="js/data/household.js"></script>
     <script src="js/data/occupations.js"></script>
     <script src="js/data/colors-shapes.js"></script>
+    <!-- B1 Vocabulary -->
+    <script src="js/data/b1_01_personalInformation_Relationship.js"></script>
+    <script src="js/data/b1_main.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/app.js"></script>
 </body>
