--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="js/data/colors-shapes.js"></script>
     <!-- B1 Vocabulary -->
     <script src="js/data/b1_01_personalInformation_Relationship.js"></script>
+    <script src="js/data/b1_02_feelings_and_emotions.js"></script>
     <script src="js/data/b1_main.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/app.js"></script>
