--- a/learn.html
+++ b/learn.html
@@ -91,6 +91,7 @@
     <script src="js/data/colors-shapes.js"></script>
     <!-- B1 Vocabulary -->
     <script src="js/data/b1_01_personalInformation_Relationship.js"></script>
+    <script src="js/data/b1_02_feelings_and_emotions.js"></script>
     <script src="js/data/b1_main.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/learning.js"></script>
